--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,10 @@
     <title>React App</title>
     <style>
       html, body, #root {
-        height: 100%;
+        min-height: 100vh;
+      }
+      #root {
+        display: flex;
       }
     </style>
   </head>
