styled wordcloud, add twitterplot graph also to detail view, which shows currently selected user

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <style>
       html, body, #root {
         min-height: 100vh;
+        min-width: 400px;
       }
       #root {
         display: flex;
