--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
-    <title>React App</title>
+    <title>Political analysis</title>
     <style>
       html, body, #root {
         min-height: 100vh;
